--- a/src/views/parts/registration-form.ejs
+++ b/src/views/parts/registration-form.ejs
@@ -18,6 +18,7 @@
                 <div class="form-group">
                     <label for="exampleInputPassword1">Password</label>
                     <input type="password" class="form-control" placeholder="Password" name="password">
+                    <input type="hidden" name="_csrf" value="<%= csrf %>" />
                 </div>
                 <button type="submit" class="btn btn-primary"><%= pageTitle %></button>
             </form>
